# skills

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Makefile  README.md  link.sh
.agents/agents/: developer.toml  firmware-architect.toml  integration-engineer.toml  planner.toml  product-owner.toml  red-team.toml  release-manager.toml  researcher.toml  reviewer.toml  technical-writer.toml  verifier.toml  workflow-architect.toml
.agents/project/: CLAUDE.md
.agents/rules/: agents-and-generation.md  docs-and-contract.md  pitchfork-layout.md  scenario-traceability.md
.claude/: CLAUDE.md  settings.json
.claude/agents/: developer.md  firmware-architect.md  integration-engineer.md  planner.md  product-owner.md  red-team.md  release-manager.md  researcher.md  reviewer.md  technical-writer.md  verifier.md  workflow-architect.md
.claude/hooks/: README.md  common.py  instructions_loaded_log.py  precompact_context.py  stop_guard.py  subagent_stop_guard.py  user_prompt_submit.py
.claude/output-styles/: repo-onboarding.md
.claude/rules/: agents-and-generation.md  claude-runtime.md  docs-and-contract.md  parallel-lanes.md  pitchfork-layout.md  risk-catalog.md
.codex/: config.toml
.codex/agents/: developer.toml  firmware-architect.toml  integration-engineer.toml  planner.toml  product-owner.toml  red-team.toml  release-manager.toml  researcher.toml  reviewer.toml  technical-writer.toml  verifier.toml  workflow-architect.toml
.github/: copilot-instructions.md
.github/agents/: developer.agent.md  firmware-architect.agent.md  integration-engineer.agent.md  planner.agent.md  product-owner.agent.md  red-team.agent.md  release-manager.agent.md  researcher.agent.md  reviewer.agent.md  technical-writer.agent.md  verifier.agent.md  workflow-architect.agent.md
.github/instructions/: build-system.instructions.md  docs.instructions.md  firmware.instructions.md
.github/workflows/: check-agent-sync.yml
agent-skills-firmware-crossplatform-canonical-agents/: AGENTS.md  Makefile  README.md
agent-skills-firmware-crossplatform-canonical-agents/.claude/: CLAUDE.md
agent-skills-firmware-crossplatform-canonical-agents/.github/: copilot-instructions.md
agent-skills-firmware-crossplatform-canonical-agents/docs/: codex-playbook.md  compatibility.md  firmware-playbook.md  operating-model.md
agent-skills-firmware-crossplatform-canonical-agents/scripts/: sync_agent_layouts.py
agent-skills-firmware-crossplatform-canonical-agents/templates/: adr-template.md  bug-report-template.md  handoff-template.md  task-template.md  verification-template.md
docs/: adopt-existing-repo.md  claude-playbook.md  codex-playbook.md  compatibility.md  copilot-vscode-playbook.md  firmware-playbook.md  operating-model.md  risks.md
docs/templates/: bounded-autonomy-loop-template.md  git-commit-template.txt  handoff-template.md  product-brief-template.md  requirements-traceability-template.md  risk-catalog-template.md  scenarios-template.md  verification-template.md  work-plan-template.md  workflow-experiment-template.md
docs/work/: README.md
docs/workflow-experiments/: EXP-001-bounded-autonomy-loop.md  EXP-002-expand-researcher-triggers.md  README.md
extras/cmake-nrf52840-template/: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json  README.md
extras/cmake-nrf52840-template/cmake/: architecture.cmake
extras/cmake-nrf52840-template/cmake/toolchains/: gcc-arm-none-eabi.cmake
extras/cmake-nrf52840-template/ld/: nrf52840.ld
extras/cmake-nrf52840-template/libs/contracts/include/starter/contracts/: console.hpp
extras/cmake-nrf52840-template/libs/domain/include/starter/domain/: hello_service.hpp
extras/cmake-nrf52840-template/libs/domain/src/: hello_service.cpp
extras/cmake-nrf52840-template/libs/platform/include/starter/platform/: semihost_console.hpp
extras/cmake-nrf52840-template/libs/platform/src/: semihost_console.cpp
extras/cmake-nrf52840-template/src/: main.cpp  startup_nrf52840.c
extras/cmake-nrf52840-template/tests/architecture/invalid-domain-dep/: CMakeLists.txt
extras/cmake-nrf52840-template/tests/host/: hello_service_test.cpp
implement/: SKILL.md
refactor-safe/: SKILL.md
scripts/: check-scenario-coverage.py  cli.py  sync_agent_layouts.py
skill-improve/: SKILL.md
templates/: codex-global-agents-template.md  git-commit-template.txt  hypothesis-template.md  optimization-scorecard-template.md  product-brief-template.md  red-team-findings-template.md  requirements-traceability-template.md  reusable-prompts.md  risk-catalog-template.md  scenarios-template.md  task-template.md  trade-study-template.md  validation-template.md  work-status-template.md
tidy-first/: SKILL.md
tools/: cli.py
tools/ci/: bootstrap-ubuntu.sh  check-clang-format.py  check-cmake-starter.sh  check-static-analysis.py
tools/dev/: install_pre_commit.py  run_clang_format.py
(+166 files in other folders)
